--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
     "test:unit": "jest",
     "typecheck": "vue-tsc --noEmit"
   },
-  "engines": {
-    "npm": "please-use-pnpm",
-    "yarn": "please-use-pnpm",
-    "pnpm": "*"
-  },
   "dependencies": {
+    "pinia": "^2.1.6",
     "vue": "^3.2.22"
   },
   "devDependencies": {
